--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-streamlit==1.34.0
-numpy==1.26.4
-open3d==0.19.0
-plotly==5.21.0
+# Main packages
+streamlit==1.25.0
+numpy==1.24.4
+open3d==0.18.0
+plotly==5.15.0
+
+# Prevent known dependency issues
+protobuf==3.20.3
