--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-# Main packages
-streamlit==1.25.0
-numpy==1.24.4
-open3d==0.18.0
-plotly==5.15.0
-
-# Prevent known dependency issues
-protobuf==3.20.3
+streamlit==1.34.0
+numpy==1.26.4
+plotly==5.21.0
+trimesh==4.2.2
+scipy==1.13.0
+networkx==3.3
+pyglet==2.0.15
